<resources>
    <string name="app_name">SAE Dashboard</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="mainTabName">Main</string>
    <string name="secondaryTabName">Secondary</string>
    <string name="troubleshootTabName">Troubleshoot</string>
    <string name="amsID">amsDisplay</string>
    <string name="imdID">imdDisplay</string>
    <string name="lvbID">lvbDisplay</string>
    <string name="bmsID">bmsDisplay</string>
    <string name="speedometerID">speedometer</string>
    <string name="powerUsagePerDisplay">0%</string>
    <string name="powerUsageAmpDisplay">Power Usage:</string>
    <string name="batteryTempDisplay">Battery Temp:</string>
    <string name="motorTempDisplay">Motor Temp:</string>
    <string name="batteryVoltageDisplay">Battery Voltage:</string>
    <string name="DataLogging">DataLogging</string>
    <string name="left_motor_data">LEFT MOTOR DATA</string>
    <string name="right_motor_data">RIGHT MOTOR DATA</string>
    <string name="battery_management_system_data">BATTERY MANAGEMENT SYSTEM DATA</string>
    <string name="power_watts">Power (Watts)</string>
    <string name="mph">mph</string>
    <string name="batt_at_0">Batt at 0</string>
    <string name="batt_at_25">Batt at 25</string>
    <string name="batt_at_50">Batt at 50</string>
    <string name="batt_at_75">Batt at 75</string>
    <string name="batt_at_100">Batt at 100</string>
    <string name="PercentSign">%</string>
    <string name="show_app_functions">Show app functions</string>
    <string name="close_serial_communication">Close Serial Communication</string>
    <string name="stop">Stop</string>
    <string name="start_usb_serial_communication">Start USB Serial Communication</string>
    <string name="start">Start</string>
    <string name="ping_serial_to_clear_faults">Ping Serial to clear faults</string>
    <string name="faults">Faults</string>
    <string name="clear_the_serial_log">Clear the serial log</string>
    <string name="clear">Clear</string>
    <string name="json">JSON</string>
    <string name="ascii">Ascii</string>
    <string name="hex">Hex</string>
    <string name="modetoggle">modeToggle</string>
    <string name="charge">Charge</string>
    <string name="UnlockedEmoji">🔓</string>
    <string name="lockedEmoji">🔒</string>
    <string name="battery">Battery</string>
    <string name="test">Test</string>
    <string name="con">Con</string>
    <string name="fault">Fault</string>
    <string name="charging">Charging</string>
    <string name="waiting">Waiting</string>
    <string name="current_state">Current State</string>
    <string name="_0">0</string>
    <string name="_0_w">0 W</string>
    <string name="_0Per">0 %</string>
    <string name="export_data">Export</string>
    <string name="left_mc_temp">Left MC Temp</string>
    <string name="left_motor_temp">Left Motor Temp</string>
    <string name="dc_bus_current">DC Bus Current</string>
    <string name="right_motor_temp">Right Motor Temp</string>
    <string name="right_mc_temp">Right MC Temp</string>
    <string name="active_aero_pos">Active Aero Pos</string>
    <string name="can_msg">CanMsg</string>
    <string name="enter_valid_canbus_values">Enter valid values</string>
    <string name="_0x">0x</string>
    <string name="hex_only">HEX Only</string>
    <string name="address">Address</string>
    <string name="byteStr">Byte</string>
    <string name="byte0">Byte0</string>
    <string name="byte1">Byte1</string>
    <string name="byte7">Byte7</string>
    <string name="byte6">Byte6</string>
    <string name="byte5">Byte5</string>
    <string name="byte4">Byte4</string>
    <string name="byte3">Byte3</string>
    <string name="byte2">Byte2</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="random">Random</string>
    <string name="contStr">Continuous</string>
    <string name="lag">Lag</string>
    <string name="data_logs">Logs</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="update">Update</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="long_press_yes_to_confirm">Hold yes to confirm</string>
    <string name="raw">Raw</string>
    <string name="usb_serial">USB Serial</string>
    <string name="console">Console</string>
    <string name="misc">Misc</string>
    <string name="testing">Testing</string>
    <string name="car_go_vrooom">Car go Vrooom</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="reset">Reset</string>
    <string name="pin_value">Pin value</string>
    <string name="set">set</string>
    <string name="echo">Echo</string>
    <string name="delay">Delay</string>
    <string name="delayhint">delay</string>
    <string name="ms">ms</string>
    <string name="upload">Upload</string>
    <string name="pack_power_watts">Pack Power (Watts)</string>
    <string name="pinout_debugTabname">pinouts</string>
    <string name="bms_voltage">BMS Voltage</string>
    <string name="bms_current">BMS Current</string>
    <string name="battery_temp">Battery Temp</string>
    <string name="charge_current_limit">Charge Current limit</string>
    <string name="discharge_current_limit">Discharge Current limit</string>
    <string name="dc_bus_voltage">DC Bus Voltage</string>
    <string name="textTemp">Text</string>
    <string name="stream_data">Stream Data</string>
    <string name="confirm_this_code_matches_on_both_devices">Confirm this code matches on both devices</string>
    <string name="xxxx">XXXX</string>
    <string name="accept_connection_to">Accept connection to </string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="connection_status">Connection Status</string>
    <string name="reverse">Reverse</string>
    <string name="download">Download</string>
    <string name="scan_qr_gif">Scan QR gif</string>
    <string name="update_json_map">Update JSON Map</string>
    <string name="find_json_file">find JSON file</string>
</resources>
