<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    app:layout_anchorGravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="true"
            android:padding="10dp"
            android:text="@string/update_json_map"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/downloadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:text="@string/download" />

            <Button
                android:id="@+id/scanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:text="@string/scan_qr_gif" />

            <Button
                android:id="@+id/findBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:text="@string/find_json_file" />

            <Button
                android:id="@+id/delBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>