<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/confirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Yesbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/yes"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/confirmText"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/Nobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmText"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_press_yes_to_confirm"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmText"
        app:layout_constraintStart_toStartOf="@+id/confirmText"
        app:layout_constraintTop_toBottomOf="@+id/confirmText" />

</androidx.constraintlayout.widget.ConstraintLayout>