<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioButton
        android:id="@+id/enableLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="@color/backgroundText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/pinScroller"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/translucentBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SideLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/PinLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/SideLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent">

        <ToggleButton
            android:id="@+id/toggleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textOff="@string/enable"
            android:textOn="@string/disable" />

        <ToggleButton
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:textOff="@string/update"
            android:textOn="@string/update" />

        <Button
            android:id="@+id/clearBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/reset"
            android:visibility="gone"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/valText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pin_value"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:lines="1"
            android:minWidth="0dp"
            android:minEms="0"
            android:textColorHint="@color/backgroundText"
            android:textSize="14sp" />

        <Button
            android:id="@+id/setBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/set" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>