<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/SidePanelLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/minBtn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="0dip"
                android:minHeight="0dip"
                android:text="@string/minus" />

            <Button
                android:id="@+id/plsBtn"
                style="@android:style/Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="0dip"
                android:minHeight="0dip"
                android:text="@string/plus" />
        </LinearLayout>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="0dip"
            android:minHeight="0dip"
            android:text="@string/update" />

        <Button
            android:id="@+id/upButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="0dip"
            android:minHeight="0dip"
            android:text="@string/up"
            android:textSize="24sp" />

        <Button
            android:id="@+id/showButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="0dip"
            android:minHeight="0dip"
            android:text="@string/show" />

        <Button
            android:id="@+id/downButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="0dip"
            android:minHeight="0dip"
            android:text="@string/down"
            android:textSize="24sp" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="0dip"
            android:minHeight="0dip"
            android:text="@string/delete" />

        <Button
            android:id="@+id/exportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="0dip"
            android:minHeight="0dip"
            android:text="@string/upload" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/FileListScroller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:overScrollMode="always"
        android:scrollIndicators="none"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/FileListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingTop="22dp"
            android:paddingEnd="32dp"
            android:paddingBottom="22dp" />
    </ScrollView>

    <ScrollView
        android:id="@+id/logScroller"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/translucentBlack"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SidePanelLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/LogViewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="12sp" />
    </ScrollView>

    <ProgressBar
        android:id="@+id/logWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/logScroller"
        app:layout_constraintEnd_toEndOf="@+id/logScroller"
        app:layout_constraintStart_toStartOf="@+id/logScroller"
        app:layout_constraintTop_toTopOf="@+id/logScroller"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>