<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121527"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@android:color/white"
        app:tabTextColor="@android:color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/mainTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainTabName" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/secondaryTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondaryTabName" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/troubleshootTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troubleshootTabName" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="399dp"
            android:layout_height="550dp"
            android:text="TextView" />
    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/Close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickStop"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/tabLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:onClick="onClickStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
