<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal">

    <TextView
        android:id="@+id/speedometer"
        android:layout_width="176dp"
        android:layout_height="115dp"
        android:background="#121527"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="336dp"
        android:layout_height="159dp"
        android:background="#121527"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856">

        <com.sccomponents.gauges.library.ScArcGauge
            android:id="@+id/powerGauge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            app:sccAngleStart="-180"
            app:sccAngleSweep="90" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="5dp"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/power_watts"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/speedometerLabel"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:text="@string/mph"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="@+id/speedometer"
        app:layout_constraintTop_toTopOf="@+id/speedometer"
        app:layout_constraintVertical_bias="0.271" />

    <ImageView
        android:id="@+id/batteryLifeIcon"

        android:layout_width="171dp"
        android:layout_height="162dp"
        android:contentDescription="@string/batt_at_0"
        android:src="@drawable/battery0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/batteryLife"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="#121527"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/batteryLifeIcon"
        app:layout_constraintStart_toStartOf="@+id/batteryLifeIcon"
        app:layout_constraintTop_toBottomOf="@+id/batteryLifeIcon" />


</androidx.constraintlayout.widget.ConstraintLayout>
